5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4148/executions/1836_1278.log
== SUBMITION (2019-07-01 18:53:28) 
-- CODE:
from numpy import*
from numpy.linalg import*



cidade1 = int(input())
cidade2 = int(input())

while(cidade2 != -1):
	acc+=[cidade1//111 - 1, cidade2//111-1]
	ciade1=ciade2
	ciade2 = int(input())
print(acc)
-- EXECUTION TIME:
1.08021
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/1278/main.py", line 10, in <module>
    acc+=[cidade1//111 - 1, cidade2//111-1]
NameError: name 'acc' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 19:37:54) 
-- CODE:
from numpy import*
from numpy.linalg import*



cidade1 = int(input())
cidade2 = int(input())

while(cidade2 != -1):
	acc+=[cidade1//111 - 1, cidade2//111-1]
	cidade1=cidade2
	cidade2 = int(input())
print(acc)
-- EXECUTION TIME:
0.924411
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/1278/main.py", line 10, in <module>
    acc+=[cidade1//111 - 1, cidade2//111-1]
NameError: name 'acc' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
